--- a/hpc/nways/nways_labs/nways_MD/English/C/jupyter_notebook/cudac/nways_cuda.ipynb
+++ b/hpc/nways/nways_labs/nways_MD/English/C/jupyter_notebook/cudac/nways_cuda.ipynb
@@ -248,7 +248,7 @@
    "outputs": [],
    "source": [
     "#compile for Tesla GPU\n",
-    "!cd ../../source_code/cudac && nvcc -O3 -w -ldl -o rdf rdf.cu -I/opt/nvidia/hpc_sdk/Linux_x86_64/20.9/cuda/11.0/include"
+    "!cd ../../source_code/cudac && nvcc -o rdf rdf.cu"
    ]
   },
   {
