--- a/hpc/nways/nways_labs/nways_MD/English/C/jupyter_notebook/openmp/nways_openmp.ipynb
+++ b/hpc/nways/nways_labs/nways_MD/English/C/jupyter_notebook/openmp/nways_openmp.ipynb
@@ -95,8 +95,26 @@
     "\n",
     "<img src=\"../images/openmp_parallel_construct.png\">\n",
     "\n",
+    "## OpenMP Data-sharing\n",
+    "In OpenMP, several constructs accept clauses that allow the user to control the data sharing. For example, you can use one of below clauses in a *Parallel* construct.\n",
     "\n",
-    "## OpenMP Worksharing\n",
+    "- `private`: Declares variables to be private to each thread in a team. Private copies of the variable are initialized from the original object when entering the region.\n",
+    "- `shared`: Shares variables among all the threads in a team.\n",
+    "- `default`: Enables you to affect the data-scope attributes of variables.\n",
+    "\n",
+    "```cpp\n",
+    "\n",
+    "#pragma omp parallel for default(shared) private(dx)\n",
+    "{\n",
+    "   for (int i=0; i < N; i++){\n",
+    "       for (int j=0; j < N; j++){\n",
+    "            dx = a[i] + b[j];\n",
+    "       }\n",
+    "   }  \n",
+    "\n",
+    "```\n",
+    "\n",
+    "## OpenMP Work-sharing\n",
     "\n",
     "As described before ```parallel``` construct creates team of theads and the execution continues redundantly on all threads of team. Ideally we would need all threads within the team to work share i.e. spilt the work. A work-sharing construct divides the execution of the enclosed code region among the members of the team that encounter it. Work-sharing constructs do not launch new threads but Divides (“workshares”) the iterations of the  loop across the threads in the team . There is no implied barrier upon entry to a work-sharing construct, however there is an implied barrier at the end of a work sharing construct. \n",
     "\n",
@@ -241,11 +259,9 @@
     "**-fopenmp-targets** : This flag allows us to compile our code for a specific target parallel hardware. Without this flag, the code will be compiled for multicore execution.\n",
     "-->\n",
     "\n",
-    "`-target=gpu|multicore` : Select the target device for all parallel programming paradigms used (OpenACC, OpenMP, Standard Languages)\n",
+    "`-mp=gpu|multicore` : Select the target device for all parallel programming paradigms used (OpenACC, OpenMP, Standard Languages)\n",
     "- `gpu`             Globally set the target device to an NVIDIA GPU\n",
     "- `multicore`       Globally set the target device to the host CPU\n",
-    "\n",
-    "Please note the `-target` option has no effect unless a language-specific option is used (e.g.: -acc, -mp, -stdpar). Use the `-⁠mp` compiler switch to enable processing of OpenMP directives and pragmas.\n",
     "\n",
     "**NOTE:** `-Minfo=mp` enables OpenMP information."
    ]
@@ -257,13 +273,17 @@
    "outputs": [],
    "source": [
     "#Compile the code for muticore\n",
-    "!cd ../../source_code/openmp && nvc++ -O3 -w -ldl -target=multicore -mp -Minfo=mp -o rdf rdf.cpp -I/opt/nvidia/hpc_sdk/Linux_x86_64/20.9/cuda/11.0/include"
+    "!cd ../../source_code/openmp && nvc++ -mp=multicore -Minfo=mp -I/opt/nvidia/hpc_sdk/Linux_x86_64/20.11/cuda/11.0/include -o rdf rdf.cpp"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Inspect the compiler feedback (you should get a similar output as below) you can see from *Line 172* that it is generating a multicore code `172, Generating Multicore code`.\n",
+    "\n",
+    "<img src=\"../images/openmp_feedback_multicore.png\">\n",
+    "\n",
     "Make sure to validate the output by running the executable and validate the output."
    ]
   },
@@ -296,7 +316,7 @@
    "outputs": [],
    "source": [
     "#profile and see output of nvptx\n",
-    "!cd ../../source_code/openmp && nsys profile -t nvtx,openmp --stats=true --force-overwrite true -o rdf_multicore ./rdf"
+    "!cd ../../source_code/openmp && nsys profile -t nvtx --stats=true --force-overwrite true -o rdf_multicore ./rdf"
    ]
   },
   {
@@ -305,7 +325,7 @@
    "source": [
     "Let's checkout the profiler's report. [Download the profiler output](../source_code/openmp/rdf_multicore.qdrep) and open it via the GUI. Have a look at the example expected profiler report below:\n",
     "\n",
-    "<img src=\"../images/.png\">\n",
+    "<img src=\"../images/openmp_multicore.png\">\n",
     "\n",
     "Feel free to checkout the [solution](../source_code/openmp/SOLUTION/rdf_offload.cpp) to help you understand better."
    ]
@@ -317,7 +337,7 @@
     "### Compile and Run for an NVIDIA GPU\n",
     "\n",
     "Without changing the code now let us try to recompile the code for NVIDIA GPU and rerun.\n",
-    "The only difference is that now we pass `gpu` value to the `-target` compiler option.`-target=gpu`. **Understand and analyze** the solution present at:\n",
+    "The only difference is that now we pass `gpu` value to the `-mp` compiler option.`-mp=gpu`. **Understand and analyze** the solution present at:\n",
     "\n",
     "[RDF Code](../../source_code/openmp/SOLUTION/rdf_offload.cpp)\n",
     "\n",
@@ -333,14 +353,14 @@
    "outputs": [],
    "source": [
     "#compile for Tesla GPU\n",
-    "!cd ../../source_code/openmp && nvc++ -O3 -w -ldl -target=gpu -mp -Minfo=mp -o rdf SOLUTION/rdf_offload.cpp -I/opt/nvidia/hpc_sdk/Linux_x86_64/20.9/cuda/11.0/include"
+    "!cd ../../source_code/openmp && nvc++ -mp=gpu -Minfo=mp -o rdf rdf.cpp"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Inspect the compiler feedback and you can see that the target regions are now active.`    172, Target region activated`.\n",
+    "Inspect the compiler feedback (you should get a similar output as below) and you can see from *Line 172* that now the GPU kernel is generated `Generating \"nvkernel__Z8pair_gpuPKdS0_S0_Pjiidddi_F222L172_1\" GPU kernel`.\n",
     "\n",
     "<img src=\"../images/openmp_feedback.png\">\n",
     "\n",
@@ -376,7 +396,7 @@
    "outputs": [],
    "source": [
     "#profile and see output of nvptx\n",
-    "!cd ../../source_code/openmp && nsys profile -t nvtx,openmp --stats=true --force-overwrite true -o rdf_gpu ./rdf"
+    "!cd ../../source_code/openmp && nsys profile -t nvtx,cuda --stats=true --force-overwrite true -o rdf_gpu ./rdf"
    ]
   },
   {
@@ -385,13 +405,16 @@
    "source": [
     "Let's checkout the profiler's report. [Download the profiler output](../../source_code/openmp/rdf_gpu.qdrep) and open it via the GUI. Have a look at the example expected profiler report below:\n",
     "\n",
-    "<img src=\"../images/.png\">"
+    "<img src=\"../images/openmp_gpu.png\">"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "If you expand the CUDA row (Timeline view), you can see memory movements as well as Kernels. Checkout the NVTX row and compare the execution time for the `Pair_Calculation` for the multicore version and the GPU offload version. In the *example screenshot*, we were able to reduce the timing from 1.63 seconds to 357.59 mseconds.\n",
+    "\n",
+    "\n",
     "# OpenMP Analysis\n",
     "\n",
     "**Usage Scenarios**\n",
@@ -452,16 +475,36 @@
    "outputs": [],
    "source": [
     "#compile for Tesla GPU\n",
-    "!cd ../../source_code/openmp && nvc++ -O3 -w -ldl -target=gpu -mp -Minfo=mp  -o rdf rdf.cpp -I/opt/nvidia/hpc_sdk/Linux_x86_64/20.9/cuda/11.0/include "
+    "!cd ../../source_code/openmp && nvc++ -mp=gpu -Minfo=mp -o rdf rdf.cpp "
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "If done correctly, you should get similar compiler feedback showing the optimization was applied. `174, Parallel loop activated with static block schedule` shows the collpase clause was applied and the parallel loop has been activated. \n",
+    "Make sure to validate the output by running the executable and validate the output."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Run on Nvidia GPU and check the output\n",
+    "!cd ../../source_code/openmp && ./rdf && cat Pair_entropy.dat"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The output should be the following:\n",
     "\n",
-    "<img src=\"../images/openmp_feedback_collapse.png\">"
+    "```\n",
+    "s2 value is -2.43191\n",
+    "s2bond value is -3.87014\n",
+    "```"
    ]
   },
   {
@@ -471,7 +514,7 @@
    "outputs": [],
    "source": [
     "#profile and see output of nvptx\n",
-    "!cd ../../source_code/openmp && nsys profile -t nvtx,openmp --stats=true --force-overwrite true -o rdf_collapse ./rdf"
+    "!cd ../../source_code/openmp && nsys profile -t nvtx,cuda --stats=true --force-overwrite true -o rdf_collapse ./rdf"
    ]
   },
   {
@@ -479,8 +522,10 @@
    "metadata": {},
    "source": [
     "Let's checkout the profiler's report. [Download the profiler output](../../source_code/openmp/rdf_collapse.qdrep) and open it via the GUI. Have a look at the example expected profiler report below:\n",
-    "n\n",
-    "<img src=\"../images/.png\">\n",
+    "\n",
+    "<img src=\"../images/openmp_gpu_collapse.png\">\n",
+    "\n",
+    "Compare the execution time for the `Pair_Calculation` from the NVTX row under CUDA row (annotated in Red rectangle in the example screenshot) with the previous section. It is clear the using collapse clause improved the performance by extracting more parallelisim.\n",
     "\n",
     "Feel free to checkout the [solution](../source_code/openmp/SOLUTION/rdf_offload_collapse.cpp) to help you understand better."
    ]
