--- a/hpc/nways/nways_labs/nways_MD/English/C/jupyter_notebook/stdpar/nways_stdpar.ipynb
+++ b/hpc/nways/nways_labs/nways_MD/English/C/jupyter_notebook/stdpar/nways_stdpar.ipynb
@@ -134,8 +134,7 @@
     "\n",
     "`-stdpar` : This flag tell the compiler to enable Parallel STL for a respective target\n",
     "- `stdpar=multicore` will allow us to compile our code for a multicore\n",
-    "- `stdpar` will allow us to compile our code for a NVIDIA GPU (Default is NVIDIA)\n",
-    "          "
+    "- `stdpar` will allow us to compile our code for a NVIDIA GPU (Default is NVIDIA)"
    ]
   },
   {
@@ -145,7 +144,7 @@
    "outputs": [],
    "source": [
     "#Compile the code for muticore\n",
-    "! $NVCPPPATH -stdpar=multicore -std=c++11 -DUSE_COUNTING_ITERATOR -I/pgi/Linux_x86_64/cuda/10.2/include -L/pgi/Linux_x86_64/cuda/10.2/lib64 -lnvToolsExt rdf.cpp"
+    "!cd ../../source_code/stdpar && nvc++ -std=c++17 -stdpar=multicore -o rdf rdf.cpp -I/opt/nvidia/hpc_sdk/Linux_x86_64/20.11/cuda/11.0/include -ltbb"
    ]
   },
   {
@@ -193,7 +192,7 @@
    "source": [
     "Let's checkout the profiler's report. [Download the profiler output](../../source_code/stdpar/rdf_stdpar_multicore.qdrep) and open it via the GUI. Have a look at the example expected profiler report below:\n",
     "\n",
-    "<img src=\"../images/.png\">\n",
+    "<img src=\"../images/stdpar_multicore.png\">\n",
     "\n",
     "\n",
     "### Compile and run for Nvidia GPU\n",
@@ -217,7 +216,7 @@
    "outputs": [],
    "source": [
     "#compile for Tesla GPU\n",
-    "!cd ../../source_code/stdpar && nvc++ -O3 -w -ldl -stdpar -std=c++11 -DUSE_COUNTING_ITERATOR -o rdf rdf.cpp "
+    "!cd ../../source_code/stdpar && nvc++ -std=c++17 -stdpar=gpu -o rdf rdf.cpp "
    ]
   },
   {
@@ -269,8 +268,7 @@
     "\n",
     "If you inspect the output of the profiler closer, you can see the usage of *Unified Memory* annotated with green rectangle which was explained in previous sections.\n",
     "\n",
-    "\n",
-    "<img src=\"../images/stdpar_um.png\">\n",
+    "Moreover, if you compare the NVTX marker `Pair_Calculation` (from the NVTX row) in both multicore and GPU version, you can see how much improvement you achieved. In the *example screenshot*, we were able to reduce that range from 1.52 seconds to 225.8 mseconds.\n",
     "\n",
     "Feel free to checkout the [solution](../../source_code/stdpar/SOLUTION/rdf.cpp) to help you understand better or compare your implementation with the sample solution."
    ]
