--- a/hpc/nways/nways_labs/nways_MD/English/nways_MD_start.ipynb
+++ b/hpc/nways/nways_labs/nways_MD/English/nways_MD_start.ipynb
@@ -29,7 +29,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**IMPORTANT**: Before we start please download the input file needed for this application from the [Google drive](https://drive.google.com/drive/folders/1aQ_MFyrjBIDMhCczse0S2GQ36MlR6Q_s?usp=sharing) and upload it to the input folder. From the top menu, click on *File*, and *Open* and navigate to `C/source_code/input` directory and copy paste the downloaded input file (`alk.traj.dcd`).\n",
+    "<!--**IMPORTANT**: Before we start please download the input file needed for this application from the [Google drive](https://drive.google.com/drive/folders/1aQ_MFyrjBIDMhCczse0S2GQ36MlR6Q_s?usp=sharing) and upload it to the input folder. From the top menu, click on *File*, and *Open* and navigate to `C/source_code/input` directory and copy paste the downloaded input file (`alk.traj.dcd`).-->\n",
     "\n",
     "\n",
     "### Tutorial Outline\n",
@@ -44,8 +44,8 @@
     "    - How to use NVTX APIs\n",
     "    - Introduction to Nsight Compute\n",
     "    - Optimization Steps to parallel programming \n",
-    "1. [OpenACC](C/jupyter_notebook/openacc/nways_openacc.ipynb) , [OpenACC Advanced](C/jupyter_notebook/openacc/nways_openacc_opt.ipynb)\n",
-    "2. [Kokkos](C/jupyter_notebook/kokkos/nways_kokkos.ipynb)\n",
+    "1. [OpenACC](C/jupyter_notebook/openacc/nways_openacc.ipynb)<!-- , [OpenACC Advanced](C/jupyter_notebook/openacc/nways_openacc_opt.ipynb)-->\n",
+    "<!--2. [Kokkos](C/jupyter_notebook/kokkos/nways_kokkos.ipynb)-->\n",
     "3. [stdpar](C/jupyter_notebook/stdpar/nways_stdpar.ipynb)\n",
     "4. [OpenMP](C/jupyter_notebook/openmp/nways_openmp.ipynb) \n",
     "5. [CUDA C](C/jupyter_notebook/cudac/nways_cuda.ipynb) "
@@ -64,8 +64,9 @@
     "Beginner, Intermediate\n",
     "\n",
     "### Target Audience and Prerequisites\n",
-    "The target audience for this lab is ..\n",
+    "The target audience for this lab is researchers/graduate students and developers who are interested in learning about programming various ways to programming GPUs to accelerate their scientific applications.\n",
     "\n",
+    "Basic experience with C/C++ programming is needed. No GPU programming knowledge is required.\n",
     "\n",
     "-----\n",
     "\n",
