--- a/hpc/nways/nways_labs/nways_MD/English/C/jupyter_notebook/cudac/nways_cuda.ipynb
+++ b/hpc/nways/nways_labs/nways_MD/English/C/jupyter_notebook/cudac/nways_cuda.ipynb
@@ -308,7 +308,7 @@
     "<img src=\"../images/cuda_profile.png\">\n",
     "\n",
     "\n",
-    "Feel free to checkout the [solution](../source_code/cudac/SOLUTION/rdf.cu) to help you understand better or compare your implementation with the sample solution.\n",
+    "Feel free to checkout the [solution](../../source_code/cudac/SOLUTION/rdf.cu) to help you understand better or compare your implementation with the sample solution.\n",
     "\n",
     "\n",
     "# CUDA C Analysis\n",
