--- a/hpc/nways/nways_labs/nways_MD/English/C/jupyter_notebook/openacc/nways_openacc.ipynb
+++ b/hpc/nways/nways_labs/nways_MD/English/C/jupyter_notebook/openacc/nways_openacc.ipynb
@@ -286,7 +286,7 @@
     "\n",
     "<img src=\"../images/openacc_construct.png\" width=\"80%\" height=\"80%\">\n",
     "\n",
-    "Feel free to checkout the [solution](../source_code/openacc/SOLUTION/rdf_parallel_directive.cpp) to help you understand better."
+    "Feel free to checkout the [solution](../../source_code/openacc/SOLUTION/rdf_parallel_directive.cpp) to help you understand better."
    ]
   },
   {
@@ -457,7 +457,7 @@
    "source": [
     "Let's checkout the profiler's report. [Download the profiler output](../../source_code/openacc/rdf_kernel.qdrep) and open it via the GUI. Checkout the OpenACC row and hover over OpenACC constructs to see if the detail looks different from when you use parallel directives. Compare the profiler report with the previous section.\n",
     "\n",
-    "Feel free to checkout the [solution](../source_code/openacc/SOLUTION/rdf_kernel_directive.cpp) to help you understand better."
+    "Feel free to checkout the [solution](../../source_code/openacc/SOLUTION/rdf_kernel_directive.cpp) to help you understand better."
    ]
   },
   {
@@ -609,7 +609,7 @@
     "\n",
     "Have a look at the data movements annotated with green color and compare it with the previous versions. We have accelerated the application and reduced the execution time by eliminating the unnecessary data transfers between CPU and GPU.\n",
     "\n",
-    "Feel free to checkout the [solution](../source_code/openacc/SOLUTION/rdf_data_directive.cpp) to help you understand better."
+    "Feel free to checkout the [solution](../../source_code/openacc/SOLUTION/rdf_data_directive.cpp) to help you understand better."
    ]
   },
   {
