--- a/hpc/nways/nways_labs/nways_MD/English/C/jupyter_notebook/openacc/nways_openacc_opt.ipynb
+++ b/hpc/nways/nways_labs/nways_MD/English/C/jupyter_notebook/openacc/nways_openacc_opt.ipynb
@@ -35,9 +35,9 @@
    "source": [
     "In this section, we will optimize the parallel [RDF](../serial/rdf_overview.ipynb) application using OpenACC. Before we begin, feel free to have a look at the parallel version of the code and inspect it once again. \n",
     "\n",
-    "[RDF Parallel Code](../../source_code/solution/rdf_data_directive.cpp)\n",
+    "[RDF Parallel Code](../../source_code/openacc/SOLUTION/rdf_data_directive.cpp)\n",
     "\n",
-    "[File Reader](../../source_code/solution/dcdread.h)\n",
+    "[File Reader](../../source_code/openacc/SOLUTION/dcdread.h)\n",
     "\n",
     "Now, let's compile, and profile it with Nsight Systems first."
    ]
@@ -49,7 +49,7 @@
    "outputs": [],
    "source": [
     "#compile the parallel code for Tesla GPU\n",
-    "!cd ../../source_code/openacc && pgc++ -acc -O3 -w -ldl -ta=tesla:lineinfo  -Minfo=accel -o rdf SOLUTION/rdf_data_directive.cpp -I/opt/nvidia/hpc_sdk/Linux_x86_64/20.9/cuda/11.0/include "
+    "!cd ../../source_code/openacc && nvc++ -acc -ta=tesla:lineinfo  -Minfo=accel -o rdf SOLUTION/rdf_data_directive.cpp "
    ]
   },
   {
@@ -66,7 +66,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Let's checkout the profiler's report. [Download the profiler output](../../source_code/openacc/SOLUTION/rdf_parallel.qdrep) and open it via the GUI."
+    "Let's checkout the profiler's report. [Download the profiler output](../../source_code/openacc/rdf_parallel.qdrep) and open it via the GUI."
    ]
   },
   {
@@ -161,7 +161,7 @@
     "\n",
     "How much this optimization will speed-up the code will vary according to the application and the target accelerator, but it is not uncommon to see large speed-ups by using collapse on loop nests. \n",
     "\n",
-    "Feel free to checkout the [solution](../source_code/openacc/SOLUTION/rdf_gang_vector_length.cpp) to help you understand better."
+    "Feel free to checkout the [solution](../../source_code/openacc/SOLUTION/rdf_gang_vector_length.cpp) to help you understand better."
    ]
   },
   {
@@ -245,7 +245,7 @@
     "\n",
     "How much this optimization will speed-up the code will vary according to the application and the target accelerator, but it is not uncommon to see large speed-ups by using collapse on loop nests. \n",
     "\n",
-    "Feel free to checkout the [solution](../source_code/openacc/SOLUTION/rdf_collapse.cpp) to help you understand better.\n",
+    "Feel free to checkout the [solution](../../source_code/openacc/SOLUTION/rdf_collapse.cpp) to help you understand better.\n",
     "\n",
     "\n",
     "There is another clause which may be useful in optimizing loops. *Tile* clause breaks down the next loops into tiles before parallelising and it promotes data locality as the device can then use data from nearby tiles. \n",
@@ -263,7 +263,7 @@
     "\n",
     "We did not cover this in the labs but this is something you can explore and compare with the explained methods of loop optimization.\n",
     "\n",
-    "Now, let's dig deeper and profile the kernel with the Nsight Compute profiler. To do this, let's use the [solution](../source_code/openacc/SOLUTION/rdf_collapse.cpp) as a reference to get a similar report from Nsight Compute. Run the application, and profile it with the Nsight Systems first."
+    "Now, let's dig deeper and profile the kernel with the Nsight Compute profiler. To do this, let's use the [solution](../../source_code/openacc/SOLUTION/rdf_collapse.cpp) as a reference to get a similar report from Nsight Compute. Run the application, and profile it with the Nsight Systems first."
    ]
   },
   {
@@ -273,7 +273,7 @@
    "outputs": [],
    "source": [
     "#compile the solution for Tesla GPU\n",
-    "!cd ../../source_code/openacc && pgc++ -acc -O3 -w -ldl -ta=tesla:lineinfo  -Minfo=accel -o rdf SOLUTION/rdf_collapse.cpp -I/opt/nvidia/hpc_sdk/Linux_x86_64/20.9/cuda/11.0/include "
+    "!cd ../../source_code/openacc && nvc++ -acc -ta=tesla:lineinfo  -Minfo=accel -o rdf SOLUTION/rdf_collapse.cpp "
    ]
   },
   {
@@ -290,7 +290,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Let's checkout the profiler's report. [Download the profiler output](../../source_code/openacc/SOLUTION/rdf_collapse_solution.qdrep) and open it via the GUI. Now, right click on the kernel `pair_gpu_182_gpu` and click on \"Analyze the Selected Kernel with NVIDIA Nsight Compute\" (see below screenshot). \n",
+    "Let's checkout the profiler's report. [Download the profiler output](../../source_code/openacc/rdf_collapse_solution.qdrep) and open it via the GUI. Now, right click on the kernel `pair_gpu_182_gpu` and click on \"Analyze the Selected Kernel with NVIDIA Nsight Compute\" (see below screenshot). \n",
     "\n",
     "<img src=\"../images/compute_analyz.png\">\n",
     "\n",
@@ -319,7 +319,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Let's checkout the Nsight Compute profiler's report together. [Download the profiler output](../../source_code/openacc/rdf_collapse.ncu-rep) and open it via the GUI. Let's checkout the first section called \"GPU Speed Of Light\". This section gives an overview of the utilization for compute and memory resources on the GPU. As you can see from the below screenshot, the Speed of Light (SOL) reports the achieved percentage of utilization of 30.58% for SM and 19.47% for memory. \n",
+    "Let's checkout the Nsight Compute profiler's report together. [Download the profiler output](../../source_code/openacc/rdf_collapse_solution.ncu-rep) and open it via the GUI. Let's checkout the first section called \"GPU Speed Of Light\". This section gives an overview of the utilization for compute and memory resources on the GPU. As you can see from the below screenshot, the Speed of Light (SOL) reports the achieved percentage of utilization of 30.58% for SM and 19.47% for memory. \n",
     "\n",
     "\n",
     "<img src=\"../images/sol.png\">\n",
