--- a/hpc/nways/nways_labs/nways_MD/English/C/jupyter_notebook/openmp/nways_openmp.ipynb
+++ b/hpc/nways/nways_labs/nways_MD/English/C/jupyter_notebook/openmp/nways_openmp.ipynb
@@ -323,11 +323,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Let's checkout the profiler's report. [Download the profiler output](../source_code/openmp/rdf_multicore.qdrep) and open it via the GUI. Have a look at the example expected profiler report below:\n",
+    "Let's checkout the profiler's report. [Download the profiler output](../../source_code/openmp/rdf_multicore.qdrep) and open it via the GUI. Have a look at the example expected profiler report below:\n",
     "\n",
     "<img src=\"../images/openmp_multicore.png\">\n",
     "\n",
-    "Feel free to checkout the [solution](../source_code/openmp/SOLUTION/rdf_offload.cpp) to help you understand better."
+    "Feel free to checkout the [solution](../../source_code/openmp/SOLUTION/rdf_offload.cpp) to help you understand better."
    ]
   },
   {
@@ -527,7 +527,7 @@
     "\n",
     "Compare the execution time for the `Pair_Calculation` from the NVTX row under CUDA row (annotated in Red rectangle in the example screenshot) with the previous section. It is clear the using collapse clause improved the performance by extracting more parallelisim.\n",
     "\n",
-    "Feel free to checkout the [solution](../source_code/openmp/SOLUTION/rdf_offload_collapse.cpp) to help you understand better."
+    "Feel free to checkout the [solution](../../source_code/openmp/SOLUTION/rdf_offload_collapse.cpp) to help you understand better."
    ]
   },
   {
